[package]
name = "futures-mockstream"
version = "0.1.0"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3.4"
futures-task = "0.3.4"
futures-core = "0.3.4"

[dev-dependencies]
smol = "0.1.4"
futures-util = "0.3.4"

