[package]
name = "futures-mockstream"
version = "0.1.2"
authors = ["Alessandro Cresto Miseroglio <alex179ohm@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description= "Minimal mockstream which implements futures async traits"
repository = "https://github.com/alex179ohm/futures-mockstream"
homepage= "https://github.com/alex179ohm/futures-mockstream"
keywords = ["async", "mock","stream", "futures"]
categories = ["asynchronous"]
readme = "README.md"


[dependencies]
futures-io = "0.3.4"
futures-task = "0.3.4"
futures-core = "0.3.4"

[dev-dependencies]
smol = "0.1.4"
futures-util = "0.3.4"

